# solgateway

./: .gitignore  README.md
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/scripts/: deploy.ts
contracts/src/: BridgeSonic.sol  IWormhole.sol  TestToken.sol
contracts/test/: BridgeSonic.test.ts  WormholeMock.sol
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: SolanaToSonicBridge.tsx  SonicToSolanaBridge.tsx
frontend/src/config/: index.ts
scripts/: package.json  tsconfig.json
scripts/src/: config.ts  fetchVAASolanaToSonic.ts  fetchVAASonicToSolana.ts
solana/: Anchor.toml  Cargo.toml
solana/programs/bridge_solana/: Cargo.toml
solana/programs/bridge_solana/src/: lib.rs
