[package]
name    = "bridge_solana"
version = "0.1.0"
edition = "2021"
description = "Solana-side bridge program for the Sonic ↔ Solana Wormhole bridge"

[lib]
crate-type = ["cdylib", "lib"]
name       = "bridge_solana"

[features]
default = []
cpi     = ["no-entrypoint"]
no-entrypoint = []
no-idl         = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1", features = ["token", "associated_token"] }

# ── Wormhole Solana SDK ───────────────────────────────────────────────────────
# Replace the git reference with a released crate version once one is published.
wormhole-anchor-sdk = { git = "https://github.com/wormhole-foundation/wormhole-anchor-sdk", branch = "main" }

[dev-dependencies]
anchor-client = { version = "0.30.1" }
